# vcpkg-fmt-template

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  package.json  pnpm-lock.yaml  vcpkg.json
.changelog/: manifest.json  v0.1.0.mdx  v0.1.1.mdx  v0.1.2.mdx
.changeset/: config.json  itchy-chairs-burn.md  tricky-otters-rescue.md  wet-items-beam.md
.github/ISSUE_TEMPLATE/: bug_report.yaml
.github/workflows/: clean-cache.yml  quality.yml  release.yml  upload-artifacts.yml  upload-assets.yml
cmake/: internal_utils.cmake  vcpkg-fmt-template-cpack.cmake
scripts/: version-bump.ts
scripts/utils/: changelog-utils.ts
src/: main.cc  vcpkg-fmt-template.cc
